fix(persistence): aggiorna la logica di salvataggio
Ora l'utente non può più scegliere dve salvare le partite, ma può scegliere solo il nome